# ai-data-analysis-agent

./: .env.example  .gitignore  README.md  pyproject.toml
src/data_analysis_agent/: __init__.py
src/data_analysis_agent/config/: __init__.py  constants.py  logging_config.py  settings.py
src/data_analysis_agent/engine/: __init__.py  analysis.py  cleaning.py  core.py  report.py  visualization.py
src/data_analysis_agent/exceptions/: __init__.py  errors.py
src/data_analysis_agent/interfaces/: __init__.py
src/data_analysis_agent/interfaces/streamlit_app/: __init__.py  app.py
src/data_analysis_agent/interfaces/streamlit_app/components/: __init__.py
src/data_analysis_agent/interfaces/streamlit_app/pages/: __init__.py
src/data_analysis_agent/models/: __init__.py  analysis_models.py  data_models.py  report_models.py
tests/: __init__.py
tests/integration/: test_engine_flow.py
tests/performance/: __init__.py
tests/unit/: test_analysis.py  test_core.py  test_visualization.py
