[project]
name = "ai-data-analysis-agent"
version = "0.1.0"
description = "Agente de análise de dados com IA — fundação do projeto (Fase 1, conforme SDD v2.0)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "Guilherme" }]

dependencies = [
    "pandas>=2.2",
    "plotly>=5.22",
    "streamlit>=1.36",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/data_analysis_agent"]
